fixed z-index bug on google contact form

--- a/src/Styles/Contact.scss
+++ b/src/Styles/Contact.scss
@@ -17,7 +17,7 @@
 	}
 	&__googleForm {
 		position: relative;
-		z-index: -1;
+		// z-index: 1;
 		transition: 0.7s ease-out;
 		overflow: hidden;
 		left: -30px;
